Development of the shows based API and documentations
